[gd_scene load_steps=16 format=3 uid="uid://dllb3rnfge4io"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_bddq2"]
[ext_resource type="Texture2D" uid="uid://cl5yph25i1wkh" path="res://assets/influencer-front.png" id="2_go6tg"]
[ext_resource type="PackedScene" uid="uid://07ru4cryg71l" path="res://Scenes/list.tscn" id="3_012wd"]
[ext_resource type="AudioStream" uid="uid://b148i4e0pyccw" path="res://assets/okea.wav" id="4_jj3fb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ont0o"]
size = Vector2(12, 22)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_bqwxp"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath("Sprite:frame")
properties/1/spawn = true
properties/1/sync = true

[sub_resource type="Animation" id="Animation_q77i3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wt26h"]
resource_name = "down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pompd"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mtgfy"]
resource_name = "left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_nudhx"]
resource_name = "right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_ptcf3"]
resource_name = "up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dhcsy"]
_data = {
"RESET": SubResource("Animation_q77i3"),
"down": SubResource("Animation_wt26h"),
"idle": SubResource("Animation_pompd"),
"left": SubResource("Animation_mtgfy"),
"right": SubResource("Animation_nudhx"),
"up": SubResource("Animation_ptcf3")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_231v4"]
radius = 9.0
height = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mokus"]
radius = 72.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_bddq2")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_go6tg")
hframes = 4

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ont0o")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_bqwxp")

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
position_smoothing_enabled = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_dhcsy")
}

[node name="List" parent="." instance=ExtResource("3_012wd")]

[node name="deadArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="deadArea"]
shape = SubResource("CapsuleShape2D_231v4")

[node name="area" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
shape = SubResource("CircleShape2D_mokus")

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="okea" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jj3fb")
pitch_scale = 0.86
bus = &"New Bus"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="deadArea" to="." method="_on_dead_area_body_entered"]
[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]
